--- a/index1.css
+++ b/index1.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden !important;
+    overflow-x: hidden;
 }
 
 body {
     font-family: 'poppins' sans-serif;
+    /* overflow-x: hidden !important; */
 }
 
 p {
@@ -224,11 +225,11 @@ header {
 }
 .container5 {
     display: flex;
-    justify-content: space-around;
+    justify-content:space-evenly;
     align-items: center;
     padding-top: 100px;
     width: 90%;
-    padding-left: 150px;
+    padding-left: 120px;
 }
 .img-part {
     width: 40%;
@@ -236,8 +237,8 @@ header {
 .right-part {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    padding-left: 20px;
+    width: 32%;
+    padding-left: 100px;
 }
 .container-right-top-part {
     display: flex;
@@ -332,7 +333,7 @@ header {
     align-items: center;
     padding-top: 100px;
     width: 90%;
-    padding-left: 150px;
+    padding-left: 120px;
 }
 .img-part {
     width: 40%;
@@ -692,7 +693,7 @@ a:hover {
         position: fixed;
         top:140px;
         left:0px;
-        background-color:pink;
+        background-color:white;
     }
     /* Hamburger icon styling */
     .ham-icon {
